Create slider with framework

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Data Binding Example</title>
+    <title>StoneWall Javascript Application Framework</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="css/dashboard.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Serif">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Boogaloo">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Economica:700,400italic">
+    <link rel="stylesheet" href="css/main.css">
     <!-- Requirejs file -->
     <script src="bower_components/requirejs/require.js"></script>
     <!-- Configuration for requirejs -->
@@ -20,7 +23,9 @@
         data-target?: location to container if not set, use document.body
     -->
     <script data-name="App" data-target="body" src="node_modules/stonewalljs/dev/loader.js"></script>
+    <style>
 
+    </style>
 </head>
 <body>
 </body>
