--- a/src/container/Container.html
+++ b/src/container/Container.html
@@ -1,25 +1,6 @@
 <div class="container-fluid">
-    <div class="col-xs-6 col-sm-3 ">
-        <div class="panel panel-default">
-            <div class="panel-heading">Basic Example</div>
-            <div class="panel-body">
-                <p><a href="#/linka">Link A</a>
-                    <a href="#/linkb">Link B</a>
-                </p>
-                <rt route="/linka">
-                    <h4>Static link</h4>
-
-                    <p>There is static content</p>
-                </rt>
-                <rt route="/linkb">
-                    <cp-val data-bind="cmp" src="widget/parser!cmp/Cmp">
-                        <pl-header>This is dynamic require content</pl-header>
-                        <pl-body>
-                            <p>Body From Parent Container</p>
-                        </pl-body>
-                    </cp-val>
-                </rt>
-            </div>
-        </div>
+    <div class="row">
+        <cp-navbar data-bind="navbar" src="widget/parser!./navBar/NavBar"></cp-navbar>
+        <cp-banner src="banner/Banner"></cp-banner>
     </div>
 </div>
