Added Mock with Design

--- a/indexprod.html
+++ b/indexprod.html
@@ -11,9 +11,12 @@
 
     <!-- Bootstrap core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Serif">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Boogaloo">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Economica:700,400italic">
+    <link rel="stylesheet" href="css/main.css">
 
-    <!-- Custom styles for this template -->`
-    <link href="css/dashboard.css" rel="stylesheet">
     <script src="bower_components/requirejs/require.js"></script>
     <script src="config.prod.js"></script>
     <!--
