--- a/src/navBar/NavBar.html
+++ b/src/navBar/NavBar.html
@@ -2,12 +2,12 @@
     <style-less>
         .navbar-default {
             background: #ffffff;
-            border-bottom: 5px solid #f7f7f7;
+            border-bottom: 5px solid #E44D26;
             .navbar-brand {
                 font-size: 3rem;
                 line-height: 4rem;
                 span {
-                    color: #29a9df;
+                    color: #E44D26;
                 }
             }
             .navbar-nav > li {
@@ -18,8 +18,8 @@
                     font-weight: normal;
                 }
                 &.active > a, a:focus, a:hover {
-                    border-top: 4px solid #29a9df;
-                    background: #29a9df;
+                    border-top: 4px solid #E44D26;
+                    background: #E44D26;
                     color: white;
                 }
             }
