--- a/src/banner/_banner.html
+++ b/src/banner/_banner.html
@@ -3,7 +3,7 @@
         @import "@{import-url}_banner.less";
     </style-less>
 
-    <bd-slider class="da-slider-frame">
+    <div tp-name="slider" class="da-slider-frame">
         <bd-slides class="da-slide" tp-bind-class="class" tp-update="true">
             <bd-header tp-tag="h2"></bd-header>
 
@@ -12,7 +12,7 @@
 
             <div class="da-img"><img tp-name="image" tp-type="bd" tp-bind-src="src" tp-bind-alt="alt"/></div>
         </bd-slides>
-    </bd-slider>
+    </div>
     <nav class="da-arrows">
         <pl-prev tp-tag="span" class="da-arrows-prev"></pl-prev>
         <pl-next tp-tag="span" class="da-arrows-next"></pl-next>
