Added content on banner and another locations

--- a/src/body/Body.html
+++ b/src/body/Body.html
@@ -24,7 +24,7 @@
         Suspendisse potenti. Maecenas gravida, turpis et consectetur rhoncus, massa enim suscipit ligula, quis malesuada
         leo libero sed dui. Aliquam vehicula ante sit amet lorem lobortis, ac posuere dui mattis. Nulla facilisi. Donec
         ultricies mi sed felis porttitor, et molestie libero ultricies.</p>
-
+    <cp-code src="../tabs/Tabs"></cp-code>
     <p>Etiam ullamcorper leo ut elit tristique cursus. Vestibulum varius elit ut luctus hendrerit. Integer ac facilisis
         metus, sit amet dapibus quam. Praesent viverra luctus quam, at auctor enim convallis vitae. Proin et sapien et
         ante condimentum tempus. Nullam interdum, ligula ac dictum gravida, ex est lacinia elit, ac feugiat diam magna
