--- a/src/threeblock/ThreeBlock.html
+++ b/src/threeblock/ThreeBlock.html
@@ -1,50 +1,23 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <cp-col1 src="widget/parser!../mediablock/MediaBlock">
-                <pl-heading class="media-heading">Media heading</pl-heading>
-                <pl-body>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
-                </pl-body>
-                <pl-image>
-                    <style-less>
-                        .media-object {
-                        width: 100px;
-                        }
-                    </style-less>
-                    <img class="media-object" src="images/html5.png" alt="...">
-                </pl-image>
-
+            <cp-col1 data-icon="glyphicon-link" src="widget/parser!../mediablock/MediaBlock">
+                <pl-heading>Reusable Components</pl-heading>
+                <pl-body>Templating supports reuse same modules in same app, or multiple applications.</pl-body>
             </cp-col1>
         </div>
         <div class="col-md-4">
-            <cp-col2 src="widget/parser!../mediablock/MediaBlock">
-                <pl-heading class="media-heading">Media heading</pl-heading>
-                <pl-body>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+            <cp-col2 data-icon="glyphicon-option-horizontal" src="widget/parser!../mediablock/MediaBlock">
+                <pl-heading>Scoped CSS</pl-heading>
+                <pl-body>Integrated Less parser. Generates Scoped CSS "Shadow DOM" concept.
                 </pl-body>
-                <pl-image>
-                    <style-less>
-                        .media-object {
-                        width: 100px;
-                        }
-                    </style-less>
-                    <img class="media-object" src="images/html5.png" alt="...">
-                </pl-image>
-
             </cp-col2>
         </div>
         <div class="col-md-4">
-            <cp-col3 src="widget/parser!../mediablock/MediaBlock">
-                <pl-heading class="media-heading">Media heading</pl-heading>
-                <pl-body>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+            <cp-col3 data-icon="glyphicon-phone" src="widget/parser!../mediablock/MediaBlock">
+                <pl-heading>Responsive</pl-heading>
+                <pl-body>Supporting Bootstrap CSS and Responsive web components.
                 </pl-body>
-                <pl-image>
-                    <style-less>
-                        .media-object {
-                        width: 100px;
-                        }
-                    </style-less>
-                    <img class="media-object" src="images/html5.png" alt="...">
-                </pl-image>
             </cp-col3>
         </div>
     </div>
