--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>StoneWall Javascript Application Framework</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Dashboard Template</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -13,19 +16,15 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Boogaloo">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Economica:700,400italic">
     <link rel="stylesheet" href="css/main.css">
-    <!-- Requirejs file -->
-    <script src="node_modules/requirejs/require.js"></script>
-    <!-- Configuration for requirejs -->
-    <script src="config.js"></script>
+
+    <script src="bower_components/requirejs/require.js"></script>
+    <script src="config.prod.js"></script>
     <!--
-        location of framework
-        data-name: location of main script for Application
+        data-name: location to app
         data-target?: location to container if not set, use document.body
     -->
-    <script data-name="App" data-target="body" src="node_modules/stonewalljs/dev/loader.js"></script>
-    <style>
+    <script data-name="App" src="bower_components/stonewall/dist/prod/loader.js"></script>
 
-    </style>
 </head>
 <body>
 </body>
