--- a/src/quote/Quote.html
+++ b/src/quote/Quote.html
@@ -3,7 +3,7 @@
         blockquote{
             margin: 20px 0;
             border-left: 4px solid #E44D26;
-            background: #efefef;
+            background: #efefef url(images/bg.png);
 
         }
     </style-less>
