--- a/src/navBar/_navBar.html
+++ b/src/navBar/_navBar.html
@@ -39,7 +39,7 @@
 
         <div class="collapse navbar-collapse" id="main-navigation">
             <ul class="nav navbar-right navbar-nav">
-                <bd-links tp-tag="li" tp-bind-class="class">
+                <bd-links tp-tag="li" tp-update="true" tp-bind-class="class">
                     <bd-link tp-tag="a" tp-bind-href="href"></bd-link>
                 </bd-links>
             </ul>
