--- a/src/tabs/_tabs.html
+++ b/src/tabs/_tabs.html
@@ -13,7 +13,7 @@
         <div class="col-md-8">
             <div class="row">
                 <ul class="nav nav-tabs">
-                    <bd-links tp-tag="li" tp-bind-class="class" tp-update="true" role="presentation"><bd-anchor tp-tag="a" tp-bind-href="href">App.js</bd-anchor></bd-links>
+                    <bd-links tp-tag="li" tp-bind-class="class" tp-update="true" role="presentation"><bd-anchor tp-tag="a" tp-update="true" tp-bind-href="href">App.js</bd-anchor></bd-links>
                 </ul>
                 <rt route="/app">
                     <cp-app data-bind="app" src="../code/Code"></cp-app>
