--- a/src/fourblock/FourBlock.html
+++ b/src/fourblock/FourBlock.html
@@ -1,36 +1,32 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <cp-block1 data-img="images/board.png" src="widget/parser!../quoterblock/QuoterBlock">
-                <pl-title>Custom Ttle</pl-title>
+            <cp-block2 data-img="images/route.jpg" src="widget/parser!../quoterblock/QuoterBlock">
+                <pl-title>Routing</pl-title>
                 <pl-body>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                </pl-body>
-            </cp-block1>
-        </div>
-        <div class="col-md-3">
-            <cp-block2 data-img="images/board.png" src="widget/parser!../quoterblock/QuoterBlock">
-                <pl-title>Custom Ttle</pl-title>
-                <pl-body>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                    <p>You can create multi page application, with friendly URLs, without refreshing page.</p>
                 </pl-body>
             </cp-block2>
         </div>
         <div class="col-md-3">
-            <cp-block3 data-img="images/board.png" src="widget/parser!../quoterblock/QuoterBlock">
-                <pl-title>Custom Ttle</pl-title>
+            <cp-block3 data-img="images/uiUpdate.jpg" src="widget/parser!../quoterblock/QuoterBlock">
+                <pl-title>Auto UI update</pl-title>
                 <pl-body>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                    <p>Automatically updating Template elements, when Object data is changed.</p>
                 </pl-body>
             </cp-block3>
         </div>
         <div class="col-md-3">
-            <cp-block4 data-img="images/board.png" data-alt="Some Alt Text" src="widget/parser!../quoterblock/QuoterBlock">
-                <pl-title>Custom Ttle</pl-title>
+            <cp-block4 data-img="images/binding.jpg" data-alt="Some Alt Text"
+                       src="widget/parser!../quoterblock/QuoterBlock">
+                <pl-title>Declarative Bindings</pl-title>
                 <pl-body>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                    <p>Easy associate Template Elements to Object data.</p>
                 </pl-body>
             </cp-block4>
+        </div>
+        <div class="col-md-3">
+            <cp-list src="widget/parser!../list/List"></cp-list>
         </div>
     </div>
 </div>
