--- a/src/Container.html
+++ b/src/Container.html
@@ -53,7 +53,7 @@
         </div>
         <cp-threeblock src="widget/parser!./threeblock/ThreeBlock"></cp-threeblock>
         <cp-fourblock src="widget/parser!./fourblock/FourBlock"></cp-fourblock>
-        <cp-body data-bind="code" src="widget/parser!./body/Body"></cp-body>
+        <cp-body src="widget/parser!./body/Body"></cp-body>
         <cp-footer src="widget/parser!./footer/Footer"></cp-footer>
     </rt>
 </div>
