--- a/src/body/Body.html
+++ b/src/body/Body.html
@@ -50,7 +50,7 @@
     Detailed tutorial you can find <a href="https://github.com/gunins/stonewall/tree/master/examples/basic">there.</a>
     Source Code <a href="https://github.com/gunins/stonewall">there.</a>
     API Docs are <a href="https://rawgit.com/gunins/stonewall/master/dist/docs/loader.html">there.</a></p>
-    <cp-code src="../tabs/Tabs"></cp-code>
+    <cp-code data-bind="tabs" src="../tabs/Tabs"></cp-code>
     <p>This framework contains everything, you need. There is tools and extensions, which ones will give to your application structure.</p>
 
     <cp-quote src="widget/parser!../quote/Quote">
