--- a/src/navBar/_navBar.html
+++ b/src/navBar/_navBar.html
@@ -2,6 +2,8 @@
     <style-less>
         .navbar-default {
             background: #ffffff;
+            border: 0;
+            border-radius: 0;
             border-bottom: 5px solid #E44D26;
             .navbar-brand {
                 font-size: 3rem;
