--- a/src/Container.html
+++ b/src/Container.html
@@ -13,14 +13,19 @@
             0% {
                 opacity: 0;
                 zoom: 0.9;
+                -moz-transform:  scale(0.9);
             }
             50% {
                 opacity: .5;
                 zoom: 1.1;
+                -moz-transform:  scale(1.1);
+
             }
             100% {
                 opacity: 1;
                 zoom: 1;
+                -moz-transform:  scale(1);
+
             }
         }
 
