--- a/src/Container.html
+++ b/src/Container.html
@@ -12,18 +12,18 @@
         @keyframes animation {
             0% {
                 opacity: 0;
-                zoom: 0.9;
-                -moz-transform:  scale(0.9);
+                transform:  scale(0.95);
+                -moz-transform:  scale(0.95);
             }
             50% {
                 opacity: .5;
-                zoom: 1.1;
-                -moz-transform:  scale(1.1);
+                transform:  scale(1.05);
+                -moz-transform:  scale(1.05);
 
             }
             100% {
                 opacity: 1;
-                zoom: 1;
+                transform:  scale(1);
                 -moz-transform:  scale(1);
 
             }
@@ -32,15 +32,15 @@
         @-webkit-keyframes animation {
             0% {
                 opacity: 0;
-                zoom: 0.9;
+                -webkit-transform:  scale(0.95);
             }
             50% {
                 opacity: .5;
-                zoom: 1.1;
+                -webkit-transform:  scale(1.05);
             }
             100% {
                 opacity: 1;
-                zoom: 1;
+                -webkit-transform:  scale(1);
             }
         }
     </style-less>
