Added CNAME Record

--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
     <link rel="apple-touch-icon" href="images/appicon/swIcon57x57.png"><!-- 57×57px -->
 
     <!-- Bootstrap core CSS -->
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="dist/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Serif">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Boogaloo">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Economica:700,400italic">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="dist/css/main.css">
 
-    <script src="bower_components/requirejs/require.js"></script>
+    <script src="dist/bower_components/requirejs/require.js"></script>
     <script src="config.prod.js"></script>
     <!--
         data-name: location to app
         data-target?: location to container if not set, use document.body
     -->
-    <script data-name="App" src="bower_components/stonewall/dist/prod/loader.js"></script>
+    <script data-name="App" src="dist/bower_components/stonewall/dist/prod/loader.js"></script>
 
 </head>
 <body>
