Move index.html to root

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Serif">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Boogaloo">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Economica:700,400italic">
-    <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <script src="dist/bower_components/requirejs/require.js"></script>
     <script src="config.prod.js"></script>
